SERVER-4844