src/mongo/s/interrupt_status_mongos.cpp
@@ -29,4 +29,8 @@ namespace mongo {
         // nothing as yet
     }
 
+    const char *InterruptStatusMongos::checkForInterruptNoAssert() {
+        return "";
+    }
+
 };
